# python-oncurrent-parallelism

./: .gitignore  pyproject.toml
python_concurrent_lecture/concurrency_tuto/dev/docs/: organized_words.textClipping
python_concurrent_lecture/concurrency_tuto/dev/src/: multi-threading_1.py  multi-threading_2.py
python_concurrent_lecture/concurrency_tuto/dev/tests/: test.py
python_concurrent_lecture/concurrency_web/: secrets.json
python_concurrent_lecture/concurrency_web/app/: book_scraper.py  main.py
python_concurrent_lecture/concurrency_web/app/templates/: index.html
python_middle_class_lecture/src/ch_01/: p_ch01_02.py  pendulum_tuto.ipynb
python_middle_class_lecture/src/ch_02/: namespace_tuto.py  p_ch_02_01.py  p_ch_02_02.py  p_ch_02_03.py
python_middle_class_lecture/src/ch_03/: p_ch_03_01.py  p_ch_03_02.py  p_ch_03_03.py
python_middle_class_lecture/src/ch_04/: p_ch_04_01.py  p_ch_04_02.py  p_ch_04_03.py  p_ch_04_04.py
python_middle_class_lecture/src/ch_05/: p_ch_05_01.py  p_ch_05_02.py  p_ch_05_03.py  p_ch_05_04.py
python_middle_class_lecture/src/ch_06/: p_ch_06_01.py  p_ch_06_02.py  p_ch_06_03.py  p_ch_06_04.py  p_ch_06_05.py
python_middle_class_lecture/src/ch_07/: p_ch_07_01.py  p_ch_07_02.py
python_middle_class_lecture/tests/: class_test.py  namespace_tuto_01.py  namespace_tuto_02.py  reduce_tuto.py
src/: py_ad_1_3.py  py_ad_1_5.py  py_ad_1_6_2.py  py_ad_1_7.py  py_ad_2_2.py  py_ad_2_3.py  py_ad_2_4.py  py_ad_2_5_2.py  py_ad_2_6_1.py  py_ad_3_2.py  py_ad_3_4.py  py_ad_3_5_1.py  py_ad_3_5_4.py  py_ad_3_6.py
(+7 files in other folders)
