[tool.poetry]
name = "tutorial-concurrent-parallelism-02"
version = "0.1.0"
description = ""
authors = ["KJS-KR <vcfdregg3@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
aiohttp = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
